--- a/src/PartsUnlimitedWebsite/config.json
+++ b/src/PartsUnlimitedWebsite/config.json
@@ -37,7 +37,9 @@
   },
   "ConnectionStrings": {
     //"DefaultConnectionString": "Data Source=114.143.207.109; Initial Catalog=WWI;User ID=sa;Password=ROOT#123; Integrated Security=False; MultipleActiveResultSets=True;"
-    "DefaultConnectionString": "server=localhost;User Id=root;password=RooT@#31*;database=wwi;persistsecurityinfo=True;"  
+    //"DefaultConnectionString": "server=localhost;User Id=root;password=RooT@#31*;database=wwi;persistsecurityinfo=True;"
+    //"DefaultConnectionString": "server=192.168.2.242;User Id=devuser;password=ROOT#123;database=wwi;persistsecurityinfo=True;",
+    "DefaultConnectionString": "server=114.143.207.108;User Id=devuser;password=ROOT#123;database=wwi;persistsecurityinfo=True;"
 
   }
 }
