--- a/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
+++ b/src/PartsUnlimitedWebsite/PartsUnlimitedWebsite.csproj
@@ -12,8 +12,8 @@
 	<PackageReference Include="Microsoft.AspNetCore.All" />	
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />	
 	<PackageReference Include="Microsoft.DotNet.InternalAbstractions" Version="1.0.500-preview2-1-003177" />	
-	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />	
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />	
+	<PackageReference Include="Stripe.net" Version="39.18.0" />	
 
  </ItemGroup>
 
