--- a/src/PartsUnlimitedWebsite/config.json
+++ b/src/PartsUnlimitedWebsite/config.json
@@ -35,11 +35,14 @@
       "InstrumentationKey": "efc04167-3227-40ff-aa88-46a271dba379"
     }
   },
+  "Stripe": {
+    "SecretKey": "sk_test_4eC39HqLyjWDarjtT1zdp7dc",
+    "PublishableKey": "pk_test_TYooMQauvdEDq54NiTphI7jx"
+  },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnectionString": "Data Source=114.143.207.109; Initial Catalog=WWI;User ID=sa;Password=ROOT#123; Integrated Security=False; MultipleActiveResultSets=True;"
-    //"DefaultConnectionString": "server=localhost;User Id=root;password=RooT@#31*;database=wwi;persistsecurityinfo=True;"
-    //"DefaultConnectionString": "server=192.168.2.242;User Id=devuser;password=ROOT#123;database=wwi;persistsecurityinfo=True;",
+    //"DefaultConnectionString": "server=localhost;User Id=root;password=RooT@#31*;database=WWINewDB;persistsecurityinfo=True;"
     "DefaultConnectionString": "server=114.143.207.108;User Id=devuser;password=ROOT#123;database=wwi;persistsecurityinfo=True;"
-
   }
 }
