--- a/src/PartsUnlimited.Models/config.json
+++ b/src/PartsUnlimited.Models/config.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnectionString": "server=114.143.207.108;User Id=devuser;password=ROOT#123;database=wwi;persistsecurityinfo=True;"
+    "DefaultConnectionString": "server=114.143.207.108;User Id=devuser;password=ROOT#123;database=wwi;persistsecurityinfo=True;",
+    //"DefaultConnectionString": "server=localhost;User Id=root;password=RooT@#31*;database=wwibackup;persistsecurityinfo=True;"
   }
 }
