--- a/src/PartsUnlimited.Models/config.json
+++ b/src/PartsUnlimited.Models/config.json
@@ -2,18 +2,20 @@
 
   "ConnectionStrings": {
     //"DefaultConnectionString": "server=114.143.207.108;User Id=devuser;password=ROOT#123;database=wwimysql;persistsecurityinfo=True;"
-    "DefaultConnectionString": "server=localhost;User Id=root;password=RooT@#31*;database=wwinewone;persistsecurityinfo=True;"
+    "DefaultConnectionString": "server=localhost;User Id=root;password=RooT@#31*;database=wwinewone;persistsecurityinfo=True;",
     //"DefaultConnectionString": "server=192.168.0.59;User Id=testuser;password=ROOT#123;database=wwibackup;persistsecurityinfo=True;"
-    //"AllowedHosts": "*"
-  },
-  "UserRole": {
-    "NewUserName": "john@mapy.com",
-    "Password": "Newuser@123"
+    "AllowedHosts": "*"
   },
   "AdminRole": {
     "UserName": "Administrator@test.com",
     "Password": "YouShouldChangeThisPassword1!"
+  },
+
+  "UserRole": {
+    "NewUserName": "john@mapy.com",
+    "Password": "Newuser@123"
   }
+
 
 }
 
